[gd_scene load_steps=3 format=2]

[ext_resource path="res://main/Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://StoryMode/Level2.gd" type="Script" id=3]

[node name="Game" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="PlayerBody" parent="." index="1"]
position = Vector2( 450, 437.865 )

[node name="ParallaxBackground" parent="Mover/MainCamera" index="0"]
biome = "cave"

[node name="ForestSprite" parent="Mover/MainCamera/ParallaxBackground/Background1" index="1"]
visible = false

[node name="ForestSprite" parent="Mover/MainCamera/ParallaxBackground/Background0" index="1"]
visible = false

[node name="ForestSprite" parent="Mover/MainCamera/ParallaxBackground/Foreground2" index="1"]
visible = false

[node name="ForestSprite" parent="Mover/MainCamera/ParallaxBackground/Foreground1" index="1"]
visible = false

[node name="ForestSprite" parent="Mover/MainCamera/ParallaxBackground/Foreground0" index="1"]
visible = false

[node name="WallOfDeath" parent="Mover/WallOfDeath/Left" index="1"]
frame = 3

[node name="WallOfDeath" parent="Mover/WallOfDeath/Right" index="1"]
frame = 3

[node name="WallOfDeath" parent="Mover/WallOfDeath/Top" index="1"]
frame = 3

[node name="WallOfDeath" parent="Mover/WallOfDeath/Bottom" index="1"]
frame = 4

[node name="Number" parent="CanvasLayer/LevelAnimation/L/E/V/E2/L2" index="0"]
frame = 2

[node name="LevelEndTimer" parent="." index="5"]
wait_time = 150.0
[connection signal="room_constructed" from="Map" to="." method="Level_2_Room_counter"]

[editable path="Map"]

[editable path="Map/Forest"]

[editable path="Map/Cave"]

[editable path="Mover/MainCamera/ParallaxBackground"]

[editable path="Mover/WallOfDeath"]

[editable path="CanvasLayer/LevelAnimation"]

[editable path="CanvasLayer/HUD"]

[editable path="CanvasLayer/InGameMenu"]
